LoongArch: implemented a basic machine flag check

With this patch I can use eu-elflint to verify LoongArch ELF
binaries. Previously eu-elflint was complaining about invalid
machine flags:

$ ./src/elflint --gnu-ld ./src/elflint
invalid machine flags: 0x43
$ echo $?
1

    * backends/loongarch_symbol.c (loongarch_init): Hook
    machine_flag_check.
    * backends/loongarch_symbol.c (loongarch_machine_flag_check):
    New function.

https://sourceware.org/bugzilla/show_bug.cgi?id=30251

Signed-off-by: Alexey Sheplyakov <asheplyakov@basealt.ru>